--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -126,7 +126,13 @@
 											</ul>
 										</li>
 										<li>II. beadandó</li>
+											<ul>
+												<li><a href="elmecha/Beadando_II_12.pdf">1.,2. feladat</a></li>
+											</ul>
 										<li>II. szorgalmi</li>
+											<ul>
+												<li><a href="elmecha/Szorgalmi_II_D.pdf">D feladat</a></li>
+											</ul>
 									</ul>
 									<h3>Tananyag:</h3>
 									<ol>
