--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -125,11 +125,11 @@
 												<li><a href="elmecha/Szorgalmi_I_C.pdf">C feladat</a></li>
 											</ul>
 										</li>
-										<li>II. beadandó</li>
+										<li>II. beadandó (11.30.)</li>
 											<ul>
 												<li><a href="elmecha/Beadando_II_12.pdf">1.,2. feladat</a></li>
 											</ul>
-										<li>II. szorgalmi</li>
+										<li>II. szorgalmi (11.30.)</li>
 											<ul>
 												<li><a href="elmecha/Szorgalmi_II_D.pdf">D feladat</a></li>
 											</ul>
